# shopping-mall

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  checks.bat  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/workflows/: checks.yml
address/: models.py  serializers.py  urls.py  views.py
address/migrations/: 0001_initial.py  0002_initial.py
apps/address/: models.py
apps/orderitems/: apps.py  models.py
apps/orders/: models.py
apps/payments/: models.py
apps/products/: models.py
apps/users/: models.py  serializers.py  urls.py  views.py
config/: settings.py  urls.py
nginx/: nginx.conf
orderitems/: models.py  serializers.py  urls.py  views.py
orderitems/migrations/: 0001_initial.py  0002_initial.py
orders/: models.py  serializers.py  urls.py  views.py
orders/migrations/: 0001_initial.py  0002_initial.py
payments/: models.py
payments/migrations/: 0001_initial.py
products/: models.py  serializers.py  urls.py  views.py
products/migrations/: 0001_initial.py
users/: models.py  serializers.py  views.py
users/migrations/: 0001_initial.py
